# waveformViewer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  test.vcd
docs/: OPTIMIZATION_PLAN.md
examples/: gl_example.cpp  gl_waveform_example.cpp  macos_render_example.mm  waveform_example.cpp
gl/: gl_surface.cpp  gl_surface.hpp
glx/: gl_context.cpp  gl_context.hpp  gl_surface.cpp  gl_surface.hpp  surface_gpu_gl.cpp
glx/glad/: glad.c  glad.h
include/: canvas.hpp  context.hpp  device.hpp  draw_pass.hpp  glyph_cache.hpp  pixmap.hpp  raster_device.hpp  recording.hpp  surface.hpp  types.hpp  vcd_parser.hpp  waveform_data.hpp  waveform_viewer.hpp  window.hpp
include/component/: component.hpp  component_base.hpp  opengl_surface.hpp  surface.hpp  types.hpp
macos/: MacSurface.hpp  MacSurface.mm
platform/opengl/: opengl_surface.cpp
src/: canvas.cpp  draw_pass.cpp  glyph_cache.cpp  gpu_device.cpp  pixmap.cpp  raster_device.cpp  recording.cpp  surface.cpp  surface_raster.cpp  surface_recording.cpp  vcd_parser.cpp  waveform_viewer.cpp
tests/: test_main.cpp
xcb/: surface_raster_xcb.cpp  xcb_raster_device.cpp  xcb_raster_device.hpp  xcb_surface.cpp  xcb_surface.hpp
